--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <a-scene mindar-face embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-	<a-asset-item id="glassesModel" src="/Glasses.glb"></a-asset-item>
+	<a-asset-item id="glassesModel" src="./Glasses.glb"></a-asset-item>
 	<a-asset-item id="headModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/face-tracking/assets/sparkar/headOccluder.glb"></a-asset-item>
       </a-assets>
 
